Fixed the fixed header on mobile. Edited bck img

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -362,11 +362,18 @@ header nav li:last-child, #navbar li {
 ----------------*/
 
 .background-image {
+	max-width: 100%;
 	height: 100%;
 	background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+@media screen and (min-width: 700px) {
+	.background-image {
+		width: 60%;
+	}
 }
 
 .welcome {
@@ -603,11 +610,16 @@ a.contact-btn {
 -----------------------*/
 
 .gray-header {
-	position: fixed;
 	color: #fff;
 	background-color: #414a4f;
 	padding: 10px 100px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 700px) {
+	.gray-header {
+		position: fixed;
+	}
 }
 
 @media (min-width: 910px) {
